src/test/ui/async-await/multiple-lifetimes/ret-impl-trait-one.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ret-impl-trait-one.rs:12:65
   |
LL | async fn async_ret_impl_trait1<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a> {
   |                                           ------                ^^^^^^^^^^^^^^
   |                                           |                     |
   |                                           |                     ...but data from `b` is held across an await point here
   |                                           |                     this `async fn` implicitly returns an `impl Future<Output = impl Trait<'a>>`
   |                                           this parameter and the returned future are declared with different lifetimes...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
